# ROW_engines

./: .gitignore  README.md  create_simcenter_csv.py
projects/: CMakeLists.txt
projects/cylinder_test/: BICG_stab.hpp  CMakeLists.txt  MasterArbeit.code-workspace  ROW_helpers.hpp  bdf2.hpp  benchmark_file_newton_methods_box_irregular_ring_B_field.csv  benchmark_file_newton_methods_box_irregular_ring_B_power.csv  benchmark_file_newton_methods_box_irregular_ring_current.csv  benchmark_file_newton_methods_small_timestep_box_irregular_ring_B_field.csv  benchmark_file_newton_methods_small_timestep_box_irregular_ring_B_power.csv  benchmark_file_newton_methods_small_timestep_box_irregular_ring_current.csv  benchmark_file_rosenbrock-wanner_box_irregular_ring_current.csv  benchmark_file_rosenbrock-wanner_box_irregular_ring_magnetic_field.csv  benchmark_file_rosenbrock-wanner_box_irregular_ring_magnetic_power copy.csv  benchmark_file_rosenbrock-wanner_box_irregular_ring_magnetic_power.csv  compute_L2_norm.py  compute_L2_norm.sh  create_folder_structure.sh  data.txt  eddycurrent.cc  eddycurrent.h  eddycurrent_rotating.h  eddycurrent_time_dependent.cc  eddycurrent_time_dependent.h  generate_bh_points (1).py  generate_bh_points.py  implicit_euler.h  increments.hpp  increments_no_rotations.hpp  magnetic_data (1).txt  magnetic_data.txt  magnetic_field_data.txt  magnetic_material.hpp  main_solve.cc  permeability.hpp  plot_permeability.py  plot_residuals.py  read_cylinder_mesh.cc  remesh_airgap.hpp  rosenbrock_wanner.hpp  (+18 more)
projects/cylinder_test/Analysis/: B_field_along_r.csv  B_field_along_r_0.022_0.8.csv  B_field_along_r_0.05.csv  plot_field_along_radius.py
projects/cylinder_test/Analysis/B_field_along_radius/: B_field_along_radius_0.vtp
projects/cylinder_test/Analysis/transient/: conductivity_10000.csv
projects/cylinder_test/benchmark_files/: benchmark_file_newton_methods_box_irregular_ring.csv  benchmark_file_newton_methods_box_irregular_ring_B_field.csv  benchmark_file_newton_methods_small_timestep_box_irregular_ring_B_field.csv  benchmark_file_newton_methods_small_timestep_box_irregular_ring_B_power.csv  benchmark_file_newton_methods_small_timestep_transformator_current.csv  benchmark_file_newton_methods_transformator_current.csv  benchmark_file_rosenbrock-wanner_box_irregular_ring.csv  benchmark_file_rosenbrock-wanner_box_irregular_ring_current copy.csv  benchmark_file_rosenbrock-wanner_box_irregular_ring_current.csv  benchmark_file_rosenbrock-wanner_box_irregular_ring_magnetic_field copy.csv  benchmark_file_rosenbrock-wanner_box_irregular_ring_magnetic_power.csv  benchmark_file_rosenbrock-wanner_transformator_current.csv  compute_L2_norm.sh
projects/cylinder_test/meshes/: cylinder.geo  cylinder_experimental.geo  cylinder_spherical.geo  cylinder_spherical_ring.geo
projects/cylinder_test/meshes/rotating/box_irregular_ring/: airgap.geo  airgap.msh  deformed_airgap.msh  deformed_airgap_derivative.msh  motor.geo  motor.msh  motor_derivative.msh  motor_increment0.msh  motor_increment1.msh  motor_increment2.msh  motor_increment3.msh  motor_increment_1.msh  motor_increment_2.msh  motor_increment_3.msh  parameters.geo  rotated_rotor.msh  rotated_rotor_derivative.msh  rotated_rotor_increment_0.msh  rotated_rotor_increment_1.msh  rotated_rotor_increment_2.msh  rotated_rotor_increment_3.msh  rotor.geo  rotor.msh  stator.geo  stator.msh  test.py
projects/cylinder_test/meshes/rotating/cylinder_irregular_ring/: airgap.msh  motor.geo  parameters.geo  rotated_rotor.msh  rotor.geo  rotor.msh  stator.geo  stator.msh
projects/cylinder_test/meshes/rotating/cylinder_smooth_ring/: airgap.geo  airgap.msh  rotated_rotor.msh  rotor.geo  rotor.msh  stator.geo  stator.msh
projects/cylinder_test/meshes/rotating/models30a/: airgap.geo  machine_magstadyn_a.pro  rotor.msh  stator.msh  t30.db  t30.geo  t30.msh  t30.pre  t30.res  t30_data.db  t30_data.geo  t30_rotor.geo  t30_rotor.msh  t30_stator.msh
projects/cylinder_test/meshes/rotating/models30a/res/: bnd.pos  ir_rotor.pos  ir_stator.pos  jz.pos
projects/cylinder_test/meshes/transformator/: test.geo  transformator.geo  transformator.msh
projects/cylinder_test/not_used_anymore/: b-h.csv  main_solve.cc  permeability.hpp  read_cylinder_mesh.cc  solve_with_rotation.cc  timestepping_main.cc
projects/cylinder_test/results/: magnetic_data.txt
projects/cylinder_test/rotational_meshing_experiments/: combined_model.msh  extracted_nodes.msh  extracted_nodes_with_physical_tag.msh  extracted_nodes_with_physical_tag_and_connectivity.msh  hybrid_discrete.geo  remesh_from_boundary.py  rotating_mesh.py  rotor.msh  stator.msh
projects/cylinder_test/rotational_meshing_experiments/rotate_cpp/: CMakeLists.txt  main.cpp  remesh_airgap.hpp  rotate_mesh.hpp  test_boundary_matching.cpp  test_meshes.cpp
projects/cylinder_test/test/: test_M_matrix.cpp  test_dof_mapping.cpp  test_meshes.cpp  test_permeability.cpp
projects/team30a/: CMakeLists.txt  read_t30_mesh.cc
projects/team30a/meshes/: t30.msh
